@@ -1,2 +1,12 @@
 # restaurant-management-system
 A project that I developed to reinforce the structures on JavaFX that I learned in the object-oriented programming applications course at university. I used MD5 encryption algorithm for Login and Register operations; I preferred MySQL as database; I also used Eclipse as the IDE.
+
+Structures required for installation and execute;
+
+Eclipse IDE
+Java SE 17
+MySQL Connector 8.0.29
+JavaFX SDK 18.0.1
+For Database: AMPPS
+Run Configuration - Arguments: --module-path "C:\Users\furkan\jdk\javafx-sdk-18.0.1\lib" --add-modules javafx.controls,javafx.fxml
+After //--module-path you need to point the path of lib folder of sdk 18.0.1.
